# Sandbox-on-EC2

./: .gitignore  CONFIG_GUIDE.md  README.md  config.json.template  config_manager.py  config_template.json  create_ec2_sandbox.sh  create_sandbox_arm.sh  create_sandbox_ec2.sh  create_sandbox_gpu.sh  demo_sandbox.py  demo_strands_agent.py  demo_webui.py  ec2_sandbox.py  ec2_sandbox_tool.py  gradio_demo.py  mcp_config.json  pyproject.toml  run.sh  strands_tools.py  user-data.sh
ec2_sandbox/: core.py  sandbox.py  session_manager.py  strands_tools.py  tool_response.py  utils.py
ec2_sandbox_mcp/: __init__.py  server.py
policies/: sandbox-policy.json
scripts/: user-data-gpu.sh  user-data.sh
tests/: test_code_length_check.py  test_fs_isolation.py  test_gradio_file_info.py  test_mcp_integration.py  test_sandbox.py  test_sandbox_agent.py  test_sandbox_full.py  test_sandbox_gpu.py  test_sandbox_gpu_function.py  test_sandbox_mcp_server.py  test_sandbox_simple.py  test_ssm_parms_limit.py
